# treelite

./: .gitignore  CMakeLists.txt
cmake/: ExternalLibs.cmake  Python_version.in  Utils.cmake  Version.cmake
include/treelite/: annotator.h  base.h  c_api.h  c_api_common.h  c_api_runtime.h  compiler.h  data.h  entry.h  frontend.h  logging.h  math.h  omp.h  predictor.h  tree.h  tree_impl.h
python/: setup.py
python/treelite/: __init__.py  annotator.py  compat.py  core.py  frontend.py  libpath.py  util.py
python/treelite/contrib/: __init__.py  gcc.py  msvc.py  util.py
python/treelite/gallery/: __init__.py
python/treelite/gallery/sklearn/: __init__.py  common.py  gbm_classifier.py  gbm_multi_classifier.py  gbm_regressor.py  rf_classifier.py  rf_multi_classifier.py  rf_regressor.py
runtime/python/treelite_runtime/: __init__.py  predictor.py  util.py
src/: CMakeLists.txt  annotator.cc  data.cc  filesystem.cc  logging.cc  reference_serializer.cc
src/c_api/: c_api.cc  c_api_common.cc  c_api_runtime.cc
src/compiler/: ast_native.cc  compiler.cc  failsafe.cc  pred_transform.cc  pred_transform.h
src/compiler/ast/: ast.h  build.cc  builder.h  dump.cc  fold_code.cc  is_categorical_array.cc  load_data_counts.cc  quantize.cc  split.cc
src/compiler/common/: categorical_bitmap.h  code_folding_util.h
src/compiler/elf/: elf_formatter.cc  elf_formatter.h
src/compiler/native/: code_folder_template.h  header_template.h  main_template.h  pred_transform.h  qnode_template.h
src/frontend/: builder.cc  lightgbm.cc  xgboost.cc
src/predictor/: predictor.cc
tests/python/: metadata.py  test_basic.py  util.py
